--- a/index.html
+++ b/index.html
@@ -6,11 +6,6 @@
    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
  </head>
  <body>
-  <p>–азум Ч это Ѕудда, а прекращение умозрительного мышлени€ Ч это путь. 
-  ѕерестав мыслить пон€ти€ми и размышл€ть о пут€х существовани€ и небыти€, 
-  о душе и плоти, о пассивном и активном и о других подобных вещах, 
-  начинаешь осознавать, что разум Ч это Ѕудда, 
-  что Ѕудда Ч это сущность разума, 
-  и что разум подобен бесконечности.</p>
+  <p>рhllwrld</p>
  </body> 
 </html>
