--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
  </head>
  <body>
-  <p>hello!</p>
+  <p>hello,suchka!</p>
  </body> 
 </html>
