--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
  </head>
  <body>
-  <p>hello,suchka!</p>
+  <p>hello,suchka!
+  dev changes</p>
  </body> 
 </html>
